# event_boundary_detect

./: .gitignore  CMakeLists.txt  EventBoundDetect.sln  README.md  readme.docx
EventBoundDetect/: .gitignore  Cluster.cpp  Cluster.h  Evaluate.cpp  FeatureHelper.cpp  FeatureHelper.h  FolderFileHelper.cpp  FolderFileHelper.h  Merge.cpp  NewCluster.cpp  PVImageInfo.cpp  PVImageInfo.h  PhotoInfo.h  PhotoProcess.cpp  PhotoProcess.h  PostSegCheck.cpp  PostSegCheck.h  PreSegment.cpp  PreSegment.h  StringHelper.h  exif.cpp  exif.h  extract_time.vcxproj  extract_time.vcxproj.filters  main.cpp  stdafx.h  test.cpp  xu_lib.cpp  xu_lib.h
cmake/: compiler.cmake
